# SDHLT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  changelog.txt  readme.txt
.github/workflows/: ci.yml
src/: Terms of Use.txt  cleanup.bat  removeifdefs.bat
src/sdhlt/: Makefile  sdhlt.sln
src/sdhlt/common/: TimeCounter.h  blockmem.cpp  blockmem.h  bspfile.cpp  bspfile.h  cmdlib.h  filelib.cpp  filelib.h  hlassert.h  log.cpp  log.h  mathlib.cpp  mathlib.h  messages.cpp  messages.h  resourcelock.cpp  scriplib.cpp  scriplib.h  stringlib.h  studio.h  threads.cpp  threads.h  win32fix.h  winding.h
src/sdhlt/sdHLBSP/: brink.cpp  bsp5.h  merge.cpp  portals.cpp  qbsp.cpp  sdHLBSP.vcproj  sdHLBSP.vcxproj  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/sdhlt/sdHLCSG/: ansitoutf8.cpp  autowad.cpp  brush.cpp  csg.h  hullfile.cpp  map.cpp  properties.cpp  qcsg.cpp  sdHLCSG.vcproj  sdHLCSG.vcxproj  sdHLCSG.vcxproj.filters  textures.cpp  wadcfg.cpp  wadinclude.cpp  wadpath.cpp  wadpath.h
src/sdhlt/sdHLRAD/: compress.cpp  lerp.cpp  lightmap.cpp  list.h  loadtextures.cpp  mathutil.cpp  meshdesc.cpp  meshdesc.h  meshtrace.cpp  meshtrace.h  progmesh.cpp  qrad.cpp  qrad.h  qradutil.cpp  sdHLRAD.vcproj  sdHLRAD.vcxproj  sdHLRAD.vcxproj.filters  sparse.cpp  stringlib.cpp  studio.cpp  transfers.cpp  vismatrix.cpp  vismatrixutil.cpp
src/sdhlt/sdHLVIS/: sdHLVIS.vcproj  sdHLVIS.vcxproj  sdHLVIS.vcxproj.filters  vis.cpp  vis.h  zones.h
src/sdhlt/sdRIPENT/: ripent.cpp  ripent.h  sdRIPENT.vcproj  sdRIPENT.vcxproj  sdRIPENT.vcxproj.filters
src/sdhlt/template/: EndianMath.h  ReferenceArray.h  ReferenceCounter.h  ReferencePtr.h  basictypes.h
src/zhlt-vluzacn/: Makefile  UpgradeLog.htm  zhlt.sln  zhlt_vc2005.sln
src/zhlt-vluzacn/Backup/: zhlt_vc2005.sln
src/zhlt-vluzacn/common/: TimeCounter.h  blockmem.cpp  boundingbox.h  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  cmdlinecfg.cpp  cmdlinecfg.h  log.cpp  log.h  mathlib.h  mathtypes.h  messages.cpp  messages.h  resourcelock.h  scriplib.cpp  scriplib.h  threads.cpp  threads.h  winding.cpp  winding.h
src/zhlt-vluzacn/hlbsp/: brink.cpp  bsp5.h  hlbsp.vcproj  hlbsp.vcxproj  hlbsp.vcxproj.filters  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/zhlt-vluzacn/hlcsg/: autowad.cpp  brush.cpp  brushunion.cpp  csg.h  hlcsg.vcproj  hlcsg.vcxproj  hlcsg.vcxproj.filters  map.cpp  properties.cpp  qcsg.cpp  textures.cpp  wadcfg.cpp  wadinclude.cpp  wadpath.cpp  wadpath.h
src/zhlt-vluzacn/hlrad/: compress.h  hlrad.vcproj  hlrad.vcxproj  hlrad.vcxproj.filters  lerp.cpp  lightmap.cpp  loadtextures.cpp  mathutil.cpp  nomatrix.cpp  qrad.cpp  qrad.h  qradutil.cpp  sparse.cpp  trace.cpp  transfers.cpp  transparency.cpp  vismatrix.cpp  vismatrixutil.cpp
src/zhlt-vluzacn/hlvis/: flow.cpp  hlvis.vcproj  hlvis.vcxproj  vis.cpp  vis.h  zones.cpp
src/zhlt-vluzacn/ripent/: ripent.cpp  ripent.h  ripent.vcproj  ripent.vcxproj  ripent.vcxproj.filters
src/zhlt-vluzacn/template/: BaseMath.h  ReferenceObject.h
tools/: lights.rad  sdhlt.fgd  sdhlt.wad  settings.txt  wad.cfg  zhlt.wad
